--- a/css/general.css
+++ b/css/general.css
@@ -27,11 +27,13 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 20px 0;
+    border-bottom: 1px solid #444;
+    margin-bottom: 15px;
 }
 
 header img {
-    width: 80px;
-    height: 80px;
+    width: 60px;
+    height: 60px;
 }
 
 header nav {
