--- a/css/main_page.css
+++ b/css/main_page.css
@@ -3,8 +3,10 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Arial', sans-serif;
-    background-color: #1b1b1b;
-    color: #f2f2f2;
+    /*background-color: #1b1b1b;*/
+    /*color: #f2f2f2;*/
+    background-color: #f4f4f4;
+    color: #333;
 }
 
 .container {
@@ -42,17 +44,21 @@ body {
 }
 
 .main-nav ul li a {
-    color: #f2f2f2;
+    /*color: #f2f2f2;*/
+    color: #333;
     text-decoration: none;
     font-size: 16px;
+    font-weight: bold;
     padding: 10px 15px;
     border-radius: 5px;
     transition: background-color 0.3s;
 }
 
 .main-nav ul li a:hover {
-    color: #8ca0ff;
-    background-color: white;
+    /*color: #8ca0ff;*/
+    /*background-color: white;*/
+    color: #333;
+    background-color: #ddd;
 }
 
 /* Main content */
