--- a/css/profile.css
+++ b/css/profile.css
@@ -6,8 +6,8 @@ body {
 }
 
 .profile-header {
-    background-color: #333;
-    color: #fff;
+    background-color: #f9f9f9;
+    color: #333;
     padding: 20px;
     text-align: center;
 }
@@ -24,7 +24,7 @@ body {
 }
 
 .profile-header nav ul li a {
-    color: #fff;
+    color: #333;
     text-decoration: none;
 }
 
