--- a/css/add_task.css
+++ b/css/add_task.css
@@ -37,6 +37,20 @@
     background-color: #ddd;
 }
 
+.header nav a.link-button {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    border-radius: 5px;
+    text-decoration: none;
+    transition: background-color 0.3s;
+}
+
+.header nav a.link-button:hover {
+    background-color: #0056b3;
+}
+
+
 /* Form Styling */
 .task-form {
     display: flex;
