--- a/css/add_category.css
+++ b/css/add_category.css
@@ -34,6 +34,10 @@ nav ul li a {
     text-decoration: none;
 }
 
+nav ul li a:hover {
+    background-color: #555555;
+}
+
 .main-content {
     padding: 20px;
     background-color: #fff;
